@@ -7,7 +7,8 @@
 * Azure storage support
 * use versioning in API urls
 * add email notifications on dataset changes
-* add filter by 'lat_modify_date'
+* add filter by 'last_modify_date'
+* add 'updates/' endpoint to fetch only changes from last ETL
 
 
 1.6
